--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,14 +1,12 @@
 .App {
   min-width: 100%;
-  max-height: 100vh;
-  background: #1a1919;
+  min-height: 100vh;
 }
-
 
 .header {
   background-color: #1a1919;
   display: flex;
-  color:azure;
+  color: azure;
   font-family: "fantasy";
   justify-content: space-between;
   align-items: center;
@@ -31,17 +29,18 @@
   line-height: 40px;
 }
 
-.logo{
+.logo {
   height: 40px;
   border-radius: 10px;
 }
 
-.content {
+.contentBody {
   padding-top: 20px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   height: calc(100vh - 70px);
-  align-items: flex-start; 
+  align-items: flex-start;
   gap: 20px;
   background-color: #1a1919;
 }
@@ -67,16 +66,16 @@
 }
 
 .balanceOptions {
-  margin-top: 20px;;
+  margin-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px
+  gap: 20px;
 }
 
 .extraOption {
   width: 180px;
-  text-align: center;  
+  text-align: center;
   border: 2px solid rgba(0, 102, 255, 0.31);
   border-radius: 1000px;
   font-weight: 600;
@@ -86,12 +85,12 @@
 
 .extraOption:hover {
   cursor: pointer;
-  background-color: #31579E;
+  background-color: #31579e;
   color: white;
 }
 
 .requestAndPay {
-  width: 100%; 
+  width: 100%;
   height: 150px;
   display: flex;
   justify-content: center;
@@ -101,7 +100,7 @@
 
 .quickOption {
   background-color: #125d86;
-  height:100px;
+  height: 100px;
   width: 100px;
   border-radius: 10px;
   color: white;
@@ -138,7 +137,7 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  height: 70px;
+  height: 75px;
   margin-left: 25px;
   gap: 30px;
 }
@@ -153,4 +152,35 @@
   color: #767676;
   font-size: 12px;
   font-weight: 600;
+}
+
+@media screen and (max-width: 1300px) {
+  .header {
+    background-color: #1a1919;
+    display: flex;
+    color: azure;
+    font-family: "fantasy";
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    height: 70px;
+  }
+
+  .App {
+    min-width: 100%;
+    min-height: 100vh;
+    padding:2px;
+  }
+
+  .firstColumn {
+    width: 400px;
+    min-height: 200px;
+  }
+
+  .secondColumn {
+    width: 500px;
+    min-height: 200px;
+  }
+  
 }
