--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,8 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
+  background-color: #1a1919;
+  overflow-x: hidden;
   -moz-osx-font-smoothing: grayscale;
 }
 
